<resources>
    <string name="app_name">My Next</string>
    <string name="action_debug_delete">(debug) delete all</string>
    <string name="action_debug_populate">(debug) populate db</string>

    <!-- Strings used for fragments for navigation -->
    <string name="categories_fragment_label">Categories Fragment</string>
    <string name="item_fragment_label">Item Fragment</string>
    <string name="new_item_fragment_label">New Item Fragment</string>

    <!--    Dummy text strings   -->
    <string name="dummytext_categorycard_title">Books</string>
    <string name="dummytext_categorycard_number">0</string>
    <string name="dummytext_categorycard_todo">to %1$s</string>
    <string name="dummytext_categorycard_var">+33%</string>
    <string name="dummytext_items_title">Books to read</string>
    <string name="dummytext_itemcard_title">The year of the flood</string>
    <string name="dummytext_itemcard_description">Second book of the maddaddam trilogy, written by Margaret Atwood</string>
    <string name="dummytext_itemcard_reco">Recommended by: Jean</string>
    <string name="dummytext_itemcard_date">Added 18.05.2020</string>

    <!--    Content descriptions -->
    <string name="contentdescr_itemcard_image">illustration image</string>
    <string name="content_descr_itemcard_selectimage">Select illustration image</string>

    <!--    Main Strings resources -->
    <string name="new_item_title">New %1$s</string>
    <string name="update_item_title">Update %1$s</string>
    <string name="newitem_hint_title">Title</string>
    <string name="newitem_hint_description">Description</string>
    <string name="newitem_hint_recommended_by">Recommended by</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="new_category">New Category</string>
    <string name="choose_default_image">Choose the default image for items in your category</string>
    <string name="category_name">Category name (e.g Books)</string>
    <string name="items_name">Items name (e.g Book)</string>
    <string name="categ_action">Action (e.g read)</string>
    <string name="new_category_fragment_label">NewCategoryFragment</string>
    <string name="categorycard_numdone">%d done this month.</string>

    <string name="recommended_by">Recommended by %1$s</string>
    <string name="dateadded">Added %1$s</string>


    <!--    Error messages-->
    <string name="newcateg_error_invalidfields">Please fill in all fields to create a new %1$s</string>
    <string name="newcateg_error_categexists">Category already exists</string>
    <string name="newitem_error_message">Please fill in title and description to create a new %1$s</string>

    <!-- Deletion messages   -->
    <string name="delete_item">Delete?</string>
    <string name="delete_item_confirm">Confirm Deletion?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>

</resources>