<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewItemFragment"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_category"
        android:textSize="30sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/createcateg_image_iv"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/book"
            android:contentDescription="@string/contentdescr_itemcard_image"/>

        <ImageView
            android:id="@+id/createcateg_chooseimage_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_descr_itemcard_selectimage"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/createcateg_image_iv"
            android:text="@string/choose_default_image"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createcateg_categname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:hint="@string/category_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createcateg_itemsname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:hint="@string/items_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createcateg_verb_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:hint="@string/categ_action"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createcateg_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createcateg_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>