<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewItemFragment"
    android:orientation="vertical"
    android:padding="2dp">

    <TextView
        android:id="@+id/createitem_maintitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_item_title"
        android:textSize="30sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/createitem_image_iv"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/book"
            android:contentDescription="@string/contentdescr_itemcard_image"/>

        <ImageView
            android:id="@+id/createitem_chooseimage_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_descr_itemcard_selectimage"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createitem_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/newitem_hint_title"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createitem_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:inputType="textCapSentences"
        android:hint="@string/newitem_hint_description"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createitem_recommender_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/newitem_hint_recommended_by"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createitem_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createitem_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>