<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/itemcard_image_iv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/book"
            android:contentDescription="@string/contentdescr_itemcard_image"
            android:scaleType="centerCrop"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemcard_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/itemcard_image_iv"
            android:text="@string/dummytext_itemcard_title"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemcard_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemcard_title_tv"
            android:layout_toEndOf="@+id/itemcard_image_iv"
            android:text="@string/dummytext_itemcard_description"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemcard_recommendedby_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemcard_description_tv"
            android:layout_toEndOf="@+id/itemcard_image_iv"
            android:text="@string/dummytext_itemcard_reco" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/itemcard_dateadded_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemcard_recommendedby_tv"
            android:layout_toEndOf="@+id/itemcard_image_iv"
            android:text="@string/dummytext_itemcard_date"
            android:textStyle="italic"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
