<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CategoriesFragment">

    <fragment
        android:id="@+id/CategoriesFragment"
        android:name="com.example.mynext.CategoriesFragment"
        android:label="@string/categories_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_CategoriesFragment_to_ItemsFragment"
            app:destination="@id/ItemsFragment" />
    </fragment>

    <fragment
        android:id="@+id/ItemsFragment"
        android:name="com.example.mynext.ItemsFragment"
        android:label="@string/item_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_ItemsFragment_to_CategoriesFragment"
            app:destination="@id/CategoriesFragment" />
        <action
            android:id="@+id/action_ItemsFragment_to_NewItemsFragment"
            app:destination="@id/NewItemsFragment" />
    </fragment>

    <fragment
        android:id="@+id/NewItemsFragment"
        android:name="com.example.mynext.NewItemFragment"
        android:label="@string/new_item_fragment_label"
        tools:layout="@layout/fragment_new_item"/>

</navigation>