<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categorycard_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummytext_categorycard_title"
            android:textSize="30sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categorycard_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummytext_categorycard_number"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categorycard_todo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummytext_categorycard_todo"
            android:textSize="20sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categorycard_numberdone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummytext_categorycard_numdone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categorycard_variationdone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummytext_categorycard_var"
            android:textColor="@color/colorIncrease"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
